data/derived/comb/progs/unify/prog6556.ml.out
Characters 49-50:
  aa + f in
       ^
Error: This expression has type int -> 'a -> int
       but an expression was expected of type int
